Fixed some problems where text encoding was not being used and instead the system encoding was being used. Occasionally encoding/decoding was done *twice* causing bogus UTF8 data. This spread to touch a lot of files although the actual changes were minor. Mainly effected the    cmd >{var} syntax